--- a/.jshintrc
+++ b/.jshintrc
@@ -5,22 +5,6 @@
   "undef": true,
   "unused": true,
   "predef": {
-    "Packery": true,
-
-    "asyncTest": false,
-    "deepEqual": false,
-    "equal": false,
-    "expect": false,
-    "module": false,
-    "notDeepEqual": false,
-    "notEqual": false,
-    "notStrictEqual": false,
-    "ok": false,
-    "QUnit": false,
-    "raises": false,
-    "start": false,
-    "stop": false,
-    "strictEqual": false,
-    "test": false
+    "Packery": true
   }
 }
