--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,12 @@
   "name": "packery",
   "version": "1.0.3",
   "author": "David DeSandro / Metafizzy",
+  "description": "bin-packing layout library",
   "main": [
-    "./js/rect.js",
-    "./js/packer.js",
-    "./js/item.js",
-    "./js/packery.js"
+    "js/rect.js",
+    "js/packer.js",
+    "js/item.js",
+    "js/packery.js"
   ],
   "dependencies": {
     "classie": "desandro/classie",
