--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,8 @@
   "main": [
     "js/rect.js",
     "js/packer.js",
-    "js/item.js",
-    "js/packery.js"
+    "js/packery.js",
+    "js/item.js"
   ],
   "dependencies": {
     "classie": "desandro/classie",
