--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   ],
   "dependencies": {
     "classie": "desandro/classie",
+    "get-style-property": "desandro/get-style-property",
     "get-size": "desandro/get-size#>=1.1.0",
     "outlayer": ">=1.1 <2"
   },
