Add pkgd files; Fixes #12
+ Build with Grunt
+ add node modules
+ add package.json

--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,11 @@
     "qunit": "1.12"
   },
   "ignore": [
+    "**/.*",
     "test/",
-    "examples/"
+    "examples/",
+    "contributing.md",
+    "package.json",
+    "Gruntfile.js"
   ]
 }
