--- a/bower.json
+++ b/bower.json
@@ -10,16 +10,16 @@
     "js/packery.js"
   ],
   "dependencies": {
-    "classie": ">=1 <2",
-    "get-style-property": ">=1 <2",
-    "get-size": "^1.1",
-    "outlayer": "^1.2.0"
+    "classie": "1.x",
+    "get-style-property": "1.x",
+    "get-size": "1.2.x",
+    "outlayer": "1.3.x"
   },
   "devDependencies": {
-    "draggabilly": ">=1 <2",
+    "draggabilly": "1.x",
     "jquery": "~1",
     "jquery-ui-draggable": "https://gist.github.com/4985610.git",
-    "qunit": "1.15"
+    "qunit": "^1.15"
   },
   "ignore": [
     "**/.*",
