--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "1.2.4",
   "description": "bin-packing layout library",
   "main": "js/packery.js",
+  "dependencies": {
+    "desandro-classie": "1.x",
+    "desandro-get-style-property": "1.x",
+    "get-size": "1.2.x",
+    "outlayer": "1.3.x"
+  },
   "devDependencies": {
+    "draggabilly": "1.x",
+    "jquery": "~1",
+    "qunitjs": "^1.15",
     "grunt": "~0.4.0",
     "grunt-contrib-jshint": "~0.4.1",
     "grunt-contrib-uglify": "~0.1.1",
