--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "draggabilly": "1.x",
     "jquery": "~1",
     "jquery-ui-draggable": "https://gist.github.com/4985610.git",
+    "jquery-bridget": "1.1.x",
     "qunit": "^1.15"
   },
   "ignore": [
