--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -4,23 +4,8 @@
   "strict": true,
   "undef": true,
   "unused": true,
-  "predef": {
-    "Packery": true,
-
-    "asyncTest": false,
-    "deepEqual": false,
-    "equal": false,
-    "expect": false,
-    "module": false,
-    "notDeepEqual": false,
-    "notEqual": false,
-    "notStrictEqual": false,
-    "ok": false,
-    "QUnit": false,
-    "raises": false,
-    "start": false,
-    "stop": false,
-    "strictEqual": false,
-    "test": false
+  "qunit": true,
+  "globals": {
+    "Packery": true
   }
 }
