--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "packery",
-  "version": "1.3.2",
-  "author": "David DeSandro / Metafizzy",
+  "version": "1.4.0",
+  "author": "Metafizzy",
   "description": "bin-packing layout library",
   "main": "js/packery.js",
   "dependencies": {
