--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "packery",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "bin-packing layout library",
   "main": "js/packery.js",
   "dependencies": {
     "desandro-classie": "1.x",
     "desandro-get-style-property": "1.x",
     "get-size": "1.2.x",
-    "outlayer": "1.4.x"
+    "outlayer": "~1.4.1"
   },
   "devDependencies": {
     "draggabilly": "1.x",
