--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "packery",
   "version": "2.0.0",
-  "description": "bin-packing layout library",
+  "description": "Gapless, draggable layout library",
   "main": "js/packery.js",
   "dependencies": {
     "get-size": "~2.0.2",
