--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -1,11 +1,11 @@
 {
   "browser": true,
-  "devel": false,
-  "strict": true,
   "undef": true,
   "unused": true,
-  "qunit": true,
   "globals": {
-    "Packery": true
+    "appendRandomSizedItems": true,
+    "gimmeAnItemElement": true,
+    "Packery": false,
+    "QUnit": false
   }
 }
