--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "packery",
-  "version": "2.0.0",
+  "version": "2.0.0-beta1",
   "description": "Gapless, draggable layout library",
   "main": "js/packery.js",
   "dependencies": {
