--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,14 @@
 {
   "name": "packery",
   "author": "David DeSandro",
-  "description": "Gapless, draggable layout library",
+  "description": "Gapless, draggable grid layouts",
   "main": "js/packery.js",
   "dependencies": {
     "get-size": "~2.0.2",
     "outlayer": "~2.0.0"
   },
   "devDependencies": {
-    "draggabilly": ">=2.1.0 <3",
+    "draggabilly": "^2.1.0",
     "jquery": ">=2 <4",
     "jquery-ui-draggable": "https://gist.github.com/4985610.git",
     "jquery-bridget": "~2.0.0",
@@ -16,11 +16,28 @@
   },
   "ignore": [
     "**/.*",
-    "test/",
-    "examples/",
     "contributing.md",
     "package.json",
-    "Gruntfile.js",
-    "sandbox/"
-  ]
+    "gulpfile.js",
+    "sandbox/",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "homepage": "http://packery.metafizzy.co",
+  "authors": [
+    "David DeSandro <desandrocodes@gmail.com>"
+  ],
+  "moduleType": [
+    "amd",
+    "globals",
+    "node"
+  ],
+  "keywords": [
+    "layout",
+    "grid",
+    "draggable"
+  ],
+  "license": "GPL-3.0"
 }
