--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "packery",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Gapless, draggable grid layouts",
   "main": "js/packery.js",
   "dependencies": {
-    "get-size": "~2.0.2",
-    "outlayer": "~2.0.0"
+    "get-size": "^2.0.2",
+    "outlayer": "^2.0.0"
   },
   "devDependencies": {
     "chalk": "^1.1.1",
