📝 https links; revise contributing

--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
   "bugs": {
     "url": "https://github.com/metafizzy/packery/issues"
   },
-  "homepage": "http://packery.metafizzy.co",
+  "homepage": "https://packery.metafizzy.co",
   "license": "GPL-3.0"
 }
