--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
     "test",
     "tests"
   ],
-  "homepage": "http://packery.metafizzy.co",
+  "homepage": "https://packery.metafizzy.co",
   "authors": [
     "David DeSandro <desandrocodes@gmail.com>"
   ],
